<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.moviescatalogue.ui.detail.DetailViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_container_offline"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_detail"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:animateLayoutChanges="true"
            android:background="@color/hint_of_red"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:title="@{viewModel.detailContentOffline.detailTitle}"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Example.Toolbar.Text"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@color/bamboo"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image_offline"
                    imgUrl="@{viewModel.detailContentOffline.detailImage}"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/detail_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_detail"
                    app:navigationIcon="@drawable/ic_detail_back" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/detail_scroll_view_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/title_offline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.detailContentOffline.detailTitle}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:lineSpacingExtra="4dp"
                    android:text="@{viewModel.detailContentOffline.detailOverview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_offline"
                    tools:text="@string/overview" />

                <TextView
                    android:id="@+id/text_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@string/director"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_director"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_overview" />

                <TextView
                    android:id="@+id/detail_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@{viewModel.detailContentOffline.detailDirector}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_director"
                    app:layout_constraintTop_toBottomOf="@+id/detail_overview"
                    tools:text="@string/director" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:max="100"
                    app:progressScore="@{viewModel.detailContentOffline.detailContentScore}"
                    android:scaleY="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_director" />

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />

                <TextView
                    android:id="@+id/detail_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@{viewModel.detailContentOffline.detailContentScoreText}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_score"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar"
                    tools:text="@string/detail_content" />

                <TextView
                    android:id="@+id/detail_top_cast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/top_cast"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_score" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_top_cast"
                    app:spanCount="3"
                    app:topCastList="@{viewModel.detailContentOffline.detailTopCast}"
                    tools:listitem="@layout/item_detail_offline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>