<resources>
    <string name="app_name">Movies Catalogue</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_show">Tv Shows</string>
    <string name="image_movies">Image Movies</string>
    <string name="title">Title</string>
    <string name="genre">Genre :</string>
    <string name="score">Score :</string>
    <string name="image_tv_shows">Image Tv Shows</string>
    <string name="date">Date</string>
    <string name="detail_image">Detail Image</string>
    <string name="overview">overview</string>
    <string name="share">Share</string>
    <string name="release_date">Release : %s</string>
    <string name="intent_content">Segera cek serial berikut : %s</string>
    <string name="homepage">homepage</string>
    <string name="status">Status :</string>
    <string name="popularity">Popularity :</string>
    <string name="date_release">Date :</string>
    <string name="vote">Vote Average :</string>
    <string name="vote_count">Vote Count :</string>
    <string name="original_title">Original Title :</string>
    <string name="tagline">tagline</string>
    <string name="backdop">Image Backdrop</string>
    <string name="season">Season List :</string>
    <string name="season_name">season name</string>
    <string name="retry">Retry</string>
    <string name="favorite">Favorite</string>
    <string name="state_true">Success Added to favorite</string>
    <string name="state_false">Success Deleted from favorite</string>
</resources>