...
        android:id="@+id/favorite_movies_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.movies.MoviesFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
